He cambiado el main.tex
	modified:   main.tex

--- a/main.tex
+++ b/main.tex
@@ -106,9 +106,7 @@
 \setlength{\cftchapnumwidth}{0pt}
 \renewcommand\thechapter{}
 \titlespacing*{\chapter}{11pt}{0pt}{11pt}
-
 \parindent0em
-
 %\makeatletter
 %\renewcommand*\l@section{\bprot@dottedtocline{1}{0em}{2.3em}}% no indentation
 %\renewcommand{\@pnumwidth}{3em}
@@ -376,7 +374,7 @@
 \include{chapters/p3}%
 %%\include{chapters/p4}% 
 \include{chapters/p5}%
-%%\end{document}
+\end{document}
 %%\include{chapters/p6}%
 \include{chapters/p7}%
 %%\include{chapters/p8}% 
