Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
                 ,series=renal, %series abbreviation
                 ,isbn=978-607-8432-13-4, %add your isbn here
                 ,url=http://www.uatx.edu/, %change for your book
-	            ,output=long % long|short|inprep
+	            ,output=short % long|short|inprep
 	            %,blackandwhite
 	            %,smallfont
 	            %,draftmode
