--- a/lsp-seriesinfo/renal-info.tex
+++ b/lsp-seriesinfo/renal-info.tex
@@ -1,10 +1,10 @@
-\begin{scriptsize}
+\begin{footnotesize}
 {{\bfseries La formación del Historiador.\newline
 Áreas terminales, prácticas profesionales, 
 servicio social\newline y las tutorías en las Licenciaturas en Historia en México}}
 
 \noindent{Elva Rivera Gómez, Georgina Flores García y Teodolina Ramírez Cano}\,\, {(Eds.)}
-\end{scriptsize}
+\end{footnotesize}
 
 \hrulefill\newline
 \begin{scriptsize}
@@ -49,7 +49,7 @@ Rico Álvarez, }}\textit{ {Sonia Bouchez Caballero,
 %\noindent{\textit{{Diseño de portada:}}} Michelle Montgomery
 
 \smallskip
-\begin{scriptsize}
+\begin{footnotesize}
 \noindent{Primera edición, 2014}
 
 \noindent{D.\ R.\ {©} UNIVERSIDAD AUTÓNOMA DE TLAXCALA}\newline
@@ -69,4 +69,4 @@ D.\ R.\  {© } {RED NACIONAL DE LICENCIATURAS EN HISTORIA Y CUERPOS ACADÉMICOS}
 \vfill
 \noindent{ 
 Impreso en México $\bullet$ \textit{Printed in Mexico}}
-\end{scriptsize}
+\end{footnotesize}
